# MARBLE

./: DEPENDENCY_ANALYSIS.md  UCLOUD_DATABASE_SETUP.md  pyproject.toml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
logs/: minecraft_mock_verify_output.jsonl
logs/pipeline/20260320_142148/: evaluation_summary.json  (+1 more)
marble/: docker-compose.yml  run_minecraft.py
marble/agent/: base_agent.py  werewolf_agent.py
marble/configs/: test_config_reasoning.yaml  test_config_reasoning_cot.yaml  test_config_reasoning_default.yaml  test_config_reasoning_react.yaml  test_config_reasoning_reflexion.yaml
marble/engine/: engine.py  engine_planner.py
marble/environments/: __init__.py  db_env.py  minecraft_env.py  werewolf_env.py
marble/evaluator/: evaluator.py  evaluator_prompts.json  werewolf_evaluator.py
marble/graph/: agent_graph.py
marble/llms/: error_handler.py  model_prompting.py
marble/memory/: long_term_memory.py  short_term_memory.py
marble/utils/: milestone.py
multiagentbench/: runjsonl2yaml.sh
scripts/coding/: run_demo.sh
scripts/database/: batch_eval.py
scripts/pipeline/: README.md  export_evaluation_comparison_csv.py  export_vllm_evaluation_comparison_csv.py  ollama_pipeline.yaml  run_ollama_evaluation_pipeline.py  run_ollama_pipeline.py  run_vllm_evaluation_pipeline.py  run_vllm_pipeline.py  vllm_pipeline.yaml
scripts/reasoning/: run_demo_reasoning.sh  run_reasoning.sh
scripts/research/: readme.md
scripts/werewolf/: readme.md
tests/: check_ollama.py  test_model_prompting.py  test_test_embedding.py  test_togetherai_completion.py
workspace/: minecraft_smoke_config.yaml  minecraft_smoke_output.jsonl  minecraft_smoke_output_run2.jsonl  solution.py  vllm_pipeline_test.yaml
workspace/minecraft_data/: .paper.env  .papermc-manifest.json  .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties
workspace/minecraft_data_1192_fresh/: .papermc-manifest.json  .rcon-cli.env  .rcon-cli.yaml  eula.txt  server.properties  usercache.json
(+2269 files in other folders)
