[project]
name = "marble"
version = "0.0.1"
description = "A template for python-based research project"
authors = [{name = "Kunlun Zhu", email = "kunlunz2@illinois.edu"}]
license = {text = "Apache 2.0 License"}
readme = "README.md"
requires-python = ">=3.9, <3.12"
dependencies = [
    "beartype",
    "PyYAML>=6.0,<7",
    "pydantic>=2.9.2,<3",
    "litellm>=1.52.1,<2",
    "ruamel.yaml>=0.17.0",
    "types-pyyaml==6.0.12.20240917",
    "types-requests==2.32.0.20240914",
    "scikit-learn>=1.5.2,<2",
    "flask>=3.0.3,<4",
    "javascript>=1.2.1",
    "names>=0.3.0,<1",
    "levenshtein>=0.26.1,<1",
    "waitress>=3.0.1,<4",
    "beautifulsoup4>=4.12.3,<5",
    "keybert>=0.8.5,<1",
    "arxiv>=2.1.3,<3",
    "pypdf2>=3.0.1,<4",
    "tqdm>=4.67.0,<5",
    "semanticscholar>=0.8.4,<1",
    "requests>=2.32.3,<3",
    "psycopg2-binary>=2.9.10,<3",
    "pymysql>=1.1.1,<2",
    "colorlog>=6.9.0,<7",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nbmake",
    "types-setuptools",
    "mypy>=1.13.0,<2",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]
exclude=["marble/environments/db_env_docker/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = [
  "."
]

[tool.codespell]
ignore-words-list = "dout, te, indicies, astroid"
skip = ["data"]

[tool.isort]
profile = "black"
use_parentheses = true
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.ruff]
line-length = 88
fix = true
target-version = "py310"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
